# soil_bot

./: README.md  pyproject.toml
src/plugins/: test.py
src/plugins/nonebot_plugin_emojimix/: __init__.py
src/plugins/nonebot_plugin_partner_join/: __init__.py  config.py
