[project]
name = "soil_bot"
version = "0.1.0"
description = "soil_bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_wordcloud", "nonebot_plugin_plus_one"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
